--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
-    "build": "vitepress build .vitepress --outDir ./dist"
+    "build": "vitepress build .vitepress --outDir ./docs"
   }
 }
